--- a/Refined_Script_for_computer_vision_tasks.ipynb
+++ b/Refined_Script_for_computer_vision_tasks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdweO1u75whbfeg0KF3V9m",
+      "authorship_tag": "ABX9TyM1j32fh5MybZPezZYJaPYC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,6 +419,15 @@
         "if record: recorder.release()\n",
         "cv2.destroyAllWindows()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# END"
+      ],
+      "metadata": {
+        "id": "3I4fWpBffcYC"
+      }
     }
   ]
 }
