--- a/Refined_Script_for_computer_vision_tasks.ipynb
+++ b/Refined_Script_for_computer_vision_tasks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1j32fh5MybZPezZYJaPYC",
+      "authorship_tag": "ABX9TyPOIK0pRBCumJX/JxeKyd+L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "    best_match = None\n",
         "    best_score = 0\n",
         "    best_box = None\n",
-        "    besttest2 = None\n",
+        "    besttext2 = None\n",
         "    bestbox2 = None\n",
         "\n",
         "    try:\n",
@@ -114,7 +114,7 @@
         "                return (center_x, center_y)\n",
         "            else:\n",
         "                if result is not None and len(result) > 0:\n",
-        "                    for line in result[0]:\n",
+        "                  for line in result[0]:\n",
         "                        if not line or not isinstance(line, (list, tuple)) or len(line) < 2:\n",
         "                            continue\n",
         "\n",
@@ -141,16 +141,19 @@
         "                                print('da el sec:'+ text)\n",
         "                                besttext2 = text.lower()\n",
         "                                bestbox2 = box\n",
+        "                  if bestbox2 is not None:\n",
+        "                    best_box = np.array(bestbox2, dtype=np.int32)\n",
+        "                    best_box[:, 0] += x1\n",
+        "                    best_box[:, 1] += y1\n",
+        "                    cv2.polylines(frame, [best_box], True, (0, 255, 0), 2)\n",
+        "                    center_x = int(np.mean(best_box[:, 0]))\n",
+        "                    center_y = int(np.mean(best_box[:, 1]))\n",
+        "                    return (center_x, center_y)\n",
         "\n",
         "\n",
         "\n",
-        "                best_box = np.array(bestbox2, dtype=np.int32)\n",
-        "                best_box[:, 0] += x1\n",
-        "                best_box[:, 1] += y1\n",
-        "                cv2.polylines(frame, [best_box], True, (0, 255, 0), 2)\n",
-        "                center_x = int(np.mean(best_box[:, 0]))\n",
-        "                center_y = int(np.mean(best_box[:, 1]))\n",
-        "                return (center_x, center_y)\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
