--- a/SceneTextRecognition.ipynb
+++ b/SceneTextRecognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqxLZWHELAYvPGgWEqF4G8",
+      "authorship_tag": "ABX9TyNu7/3+XNbPXfr/hjKh49i+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -631,6 +631,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Lion Tests"
+      ],
+      "metadata": {
+        "id": "B4H9F00y-dXo"
+      }
     },
     {
       "cell_type": "code",
