--- a/Refined_Script_for_computer_vision_tasks.ipynb
+++ b/Refined_Script_for_computer_vision_tasks.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOIK0pRBCumJX/JxeKyd+L",
+      "authorship_tag": "ABX9TyP09DntK9KFntDkWopeDSPx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
         "\n",
         "\n",
         "                box = line[0]\n",
-        "                print(text)\n",
+        "                #print(text)\n",
         "                score = difflib.SequenceMatcher(None, text.lower(), classname.lower()).ratio()\n",
         "                if score > best_score:\n",
         "                    best_score = score\n",
@@ -103,8 +103,8 @@
         "                    best_box = box\n",
         "\n",
         "\n",
-        "            if best_box is not None and best_score > 0.3:\n",
-        "                print('da difflib:' + best_match)\n",
+        "            if best_box is not None and best_score > 0.4:\n",
+        "                #print('da difflib:' + best_match)\n",
         "                best_box = np.array(best_box, dtype=np.int32)\n",
         "                best_box[:, 0] += x1\n",
         "                best_box[:, 1] += y1\n",
@@ -127,18 +127,20 @@
         "\n",
         "                        if classname.lower() == 'snickers':\n",
         "                            if 'sn' in text.lower() or 'ic' in text.lower() or 'ck' in text.lower() or 'ke' in text.lower() or 'er' in text.lower() or 'rs' in text.lower():\n",
-        "                                print('da el sec:'+ text)\n",
+        "                                #print('da el sec:'+ text)\n",
         "                                besttext2 = text.lower()\n",
         "                                bestbox2 = box\n",
         "\n",
         "                        elif classname == 'lion':\n",
-        "                            if 'li' in text.lower() or 'io' in text.lower() or 'on' in text.lower() or 'no' in text.lower():\n",
-        "                                print('da el sec:'+ text)\n",
-        "                                besttext2 = text.lower()\n",
-        "                                bestbox2 = box\n",
+        "                            if 's' not in text.lower():\n",
+        "                                #print('right')\n",
+        "                                if 'li' in text.lower() or 'io' in text.lower() or 'on' in text.lower() or 'no' in text.lower():\n",
+        "                                    #print('da el sec:'+ text)\n",
+        "                                    besttext2 = text.lower()\n",
+        "                                    bestbox2 = box\n",
         "                        elif classname == 'mars':\n",
         "                            if 'rs' in text.lower() or 'w' in text.lower():\n",
-        "                                print('da el sec:'+ text)\n",
+        "                                #print('da el sec:'+ text)\n",
         "                                besttext2 = text.lower()\n",
         "                                bestbox2 = box\n",
         "                  if bestbox2 is not None:\n",
